# OctoPrint

./: .codespell_ignore_words  .editorconfig  .eslintignore  .eslintrc.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .ignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .travis.yml  .versioneer-lookup  AGENTS.md  AUTHORS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NetBox3d  README  README.md  RELEASE-NOTES.md  Rakefile  SECURITY.md  SPONSORS.md  SUPPORTERS.md  THIRDPARTYLICENSES.md  Taskfile.yml  Venenorosmd@msn.com  _config.yml  babel.cfg  black.toml  build.sh  build_patches.sh  (+22 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue-validation.yml  labeler.yml  pr-validation.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_dev_bug.yml  04_dev_task.yml  05_dev_rc_feedback.yml  bug_report.md  bug_report.yml  bug_report_v2.yml  config.yml  feature_request.md  feature_request.yml
.github/ci/: csrf_test.py
.github/workflows/: add_to_backlog.yml  build.yml  cicd.yml  cleanup.yml  e2e.yml  fix-typos.yml  issue_automation.yml  issue_cleanup.yml  issue_labeler.yml  linkify_bundles.yml  lock.yml  nightly_canary.yml  nightly_e2e.yml  nightly_e2e_test.yml  nightly_merge.yml  pr_automation.yml  process_bundles.yml  project_automation_for_ticket_triage_via_labels.yml  test_install.yml  test_install_py2.yml  trigger_docker.yml  trigger_docs.yml
.tx/: config
Cura/: __init__.py  cura.py  setup.py
Cura/alterations/: end.gcode  nextobject.gcode  start.gcode
Cura/avr_isp/: chipDB.py  intelHex.py  ispBase.py  stk500v2.py
Cura/example/: Attribution.txt  UltimakerHandle.stl  UltimakerRobotCourseMesh.stl
Cura/fabmetheus_utilities/: settings.py  svg_writer.py
Cura/firmware/: default.h  default.hex  ultimaker_250000.h  ultimaker_250000.hex
Cura/gui/: __init__.py  advancedConfig.py  alterationPanel.py  app.py  batchRun.py  configBase.py  configWizard.py  dropTarget.py  expertConfig.py  firmwareInstall.py  flatSlicerWindow.py  gcodeInterpreter.py  gcodeTextArea.py  icon.py  machineCom.py  mainWindow.py  opengl.py  pluginPanel.py  preferencesDialog.py  preview3d.py  printWindow.py  projectPlanner.py  simpleMode.py  sliceProgessPanel.py  sliceRun.py  splashScreen.py  taskbar.py  toolbarUtil.py  validators.py  webcam.py
Cura/images/: ultimaker_platform.stl
Cura/newui/: advancedConfig.py  alterationPanel.py  configBase.py  configWizard.py  gcodeInterpreter.py  machineCom.py  mainWindow.py  preferencesDialog.py  preview3d.py  profile.py  sliceRun.py
Cura/plugins/: pauseAtZ.py
Cura/resources/: Cura.icns
Cura/util/: __init__.py  dae.py  exporer.py  gcodeInterpreter.py  machineCom.py  mesh.py  meshLoader.py  obj.py  profile.py  resources.py  sliceRun.py  stl.py  svg.py  util3d.py  validators.py  version.py
Cura/webui/: __init__.py  printer.py
SkeinPyPy/: SkeinforgeVersion  skeinpypy.py  terminal.sh  test.stl
SkeinPyPy/avr_isp/: stk500v2.py
SkeinPyPy/documentation/: contents.html  fabmetheus_utilities.archive.html  fabmetheus_utilities.euclidean.html  fabmetheus_utilities.fabmetheus_tools.alphabetize.html  fabmetheus_utilities.fabmetheus_tools.fabmetheus_interpret.html  fabmetheus_utilities.fabmetheus_tools.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.gts.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.obj.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.slc.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.stl.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.svg.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.xml.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.xml_plugins.artofillusion.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.xml_plugins.fabmetheus.html  fabmetheus_utilities.fabmetheus_tools.interpret_plugins.xml_plugins.html  fabmetheus_utilities.fabmetheus_tools.prepare.html  fabmetheus_utilities.fabmetheus_tools.wikifier.html  fabmetheus_utilities.gcodec.html  fabmetheus_utilities.geometry.creation._drill.html  (+205 more)
SkeinPyPy_NewUI/: SkeinforgeVersion  skeinpypy.py
_data/: authors.yaml  categories.yaml  kits.yaml  promo.yaml  sponsors.yaml
_includes/: footer.html  navigation.html  pageheader.html  pagination.html  post_category  share_snippet  sponsorcolumn.html
_layouts/: categoryfeed.xml  default.html  download.html  excludedfeed.xml  page.html  post.html
_posts/: 2013-03-18-progress-report.md
_site/: archive.html  atom.xml  categories.html  index.html  pages.html  rss.xml  sitemap.txt  tags.html
blog/: index.html
checkSSE2/: Makefile  main.c
debian/: Wheezy-install-instructions.txt  changelog  control  copyright  install  postinst  rules
docs/: Makefile  conf.py  gettingstarted.md  index.md  index.rst  make.bat  requirements.txt
docs-tfg/: req_sol_object_exceeds_printing_area.txt  req_sol_printing_schedule.txt  req_sol_slic3r_integration.txt
download/: index.md
feeds/: all.xml  important.xml  news.xml  octoblog.xml  octopi.xml  octoprintonair.xml  releases.xml  spotlight.xml
imprint/: index.html
octoprint/: 1q  daemon.py  events.md  events.py  events.txt  gcodefiles.py  gcodefiles.py.orig  printer.py  printer.py.orig  server.py  server.py.orig  settings.py  settings.py.orig  timelapse.py  users.py
patches/: 41  45  46  48
printer_webui/: printer.py  server.py  settings.py  timelapse.py  webcam.py
scripts/: README.md  octoprint.default  octoprint.init  octoprint.service
setup/: local_run.bat  local_setup.bat
slides/: index.md
snap/: snapcraft.yaml
support-octoprint/: index.html
tests/: _fixups.py  test_daemon.py  test_events.py  test_file_manager.py  test_octoprint_setuptools.py  test_plugin_core.py  test_python_bugs.py  test_settings.py
tools/: scan-deps.py
trademark-rules/: index.md
translations/: messages.pot
(+2096 files in other folders)
