[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-tag
versionfile_source = src/octoprint/_version.py
versionfile_build = octoprint/_version.py
tag_prefix =
parentdir_prefix =
lookupfile = .versioneer-lookup

[flake8]
ignore =
    D
    E
    W
    F401
    F523
exclude =
    src/octoprint/vendor
