[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-tag
versionfile_source = src/octoprint/_version.py
versionfile_build = octoprint/_version.py
tag_prefix =
parentdir_prefix =
lookupfile = .versioneer-lookup

[flake8]
max-line-length = 90
extend-ignore = E203, E231, E265, E266, E402, E501, E731
select = B,C,E,F,W,T4,B9
exclude =
    src/octoprint/vendor

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 90
skip =
    src/octoprint/vendor
known_first_party =
    octoprint
    octoprint_setuptools
    octoprint_client

[codespell]
skip = *.po,*.min.js,.git,*/vendor/*,*/lib/*,*/bootstrap/*,*/node_modules/*,*/translations/*,*/venv*,*/.*,*/build/*,*/_build/*,setup.cfg,AUTHORS.md
ignore-words = .codespell_ignore_words
quiet-level = 3
count =
